# Database

Homework 1 complete/: DB.h  Makefile  PassengerInfo.h  input.config  testdb.cpp
Homework-1/Complete/: PassengerInfo.cpp
Homework-1/Instructor/: database.cpp  main  main.cpp
Homework-1/Self/: DB.cpp
Homework-1/Solution/: Makefile  database.cpp  database.h
Homework-2/In-Progress/: DB.cpp  DB.h  PassengerInfo.cpp  PassengerInfo.h  input.config  input.data  testdb.cpp
Homework-2/Self/: CMakeLists.txt  MakeFile  Self  typescript
Homework-2/Self/Data/: TravelerInfo.config  TravelerInfo.data  TravelerInfoTest.config  TravelerInfoTest.data
Homework-2/Self/Include/: Database.h  Database.hpp  TravelerInfo.h
Homework-2/Self/Include/Concrete/: TravelerInfo.hpp
Homework-2/Self/Include/Factory/: DatabaseFactory.hpp
Homework-2/Self/Include/Interface/: IRecord.hpp
Homework-2/Self/Include/Interfaces/: IRecord.hpp
Homework-2/Self/Src/: Database.cpp  Main.cpp  TravelerInfo.cpp
Homework-2/Self/TestData/: TravelerInfoTest.csv  TravelerInfoTest.data
Homework-2/Self/Utils/: Utils.cpp  Utils.h
Homework-3/Migration/: Dish.sql  FoodOrder.sql  MenuItem.sql  Restaurant.sql
Homework-3/Seed/: FoodOrder.sql  MenuItem.sql  Restaurant.sql
Homework-4/: Makefile  compileandruncpp.sh  hw3_soln.sh  odbc_example.cpp  package-lock.json  package.json  tran
Homework-4/src/: main.cpp
